@@ -54,6 +54,7 @@
    - ofoBatLine: migrate to G_ADD_PRIVATE (todo #994).
    - ofoClass: migrate to G_ADD_PRIVATE (todo #994).
    - ofoConcil: migrate to G_ADD_PRIVATE (todo #994).
+   - ofoCurrency: migrate to G_ADD_PRIVATE (todo #994).
 
 -----------------------------------------------------------------------
  Version 0.48
